--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     if (!WebAssembly.instantiateStreaming) { // polyfill 
       WebAssesmbly.instantiateStreaming = async (resp, importObject) => {
          const source = await (await resp).arrayBuffer();
-         return await WebAssembly.instantiate(source, importObject);
-       };
+         return await WebAssembly.instantiate(source, importObject
     }
     const go = new Go();
+    let mod, inst;
+    WebAssembly.instantiateeStreaming(fech("main.wasm"), go.importObject).then(result) => {
