--- a/index.html
+++ b/index.html
@@ -1,18 +1,37 @@
 <HTML>
   
-<head>
-  <meta charset="utf-8">
-  <title>Go and WebAssembly</title>
-</head>
+    <head>
+      <meta charset="utf-8">
+      <title>Go and WebAssembly</title>
+    </head>
+    
+    <body>
+      <script src="wasm_exec.js"></script>
+      <script>
+        if (!WebAssembly.instantiateStreaming) { // polyfill 
+          WebAssesmbly.instantiateStreaming = async (resp, importObject) => {
+             const source = await (await resp).arrayBuffer();
+             return await WebAssembly.instantiate(source, importObject);
+          };
+        }
 
-<body>
-  <sctipt src="wasm_exec.js"></script>
-  <script>
-    if (!WebAssembly.instantiateStreaming) { // polyfill 
-      WebAssesmbly.instantiateStreaming = async (resp, importObject) => {
-         const source = await (await resp).arrayBuffer();
-         return await WebAssembly.instantiate(source, importObject
-    }
-    const go = new Go();
-    let mod, inst;
-    WebAssembly.instantiateeStreaming(fech("main.wasm"), go.importObject).then(result) => {
+        const go = new Go();
+        let mod, inst;
+        WebAssembly.instantiateeStreaming(fech("main.wasm"), go.importObject).then(result) => {
+            mod = result.module;
+            inst = result.instance;
+            document.getElementById("runButton").disabled = false;
+        }.catch((err) => {
+            console.error(err);
+        });
+
+        async function run() {
+            console.clear();
+            await go.run(inst);
+            inst = await WebAssembly.instantiate(mod, go.importObject);
+        }
+    </script>
+
+    <button onClick="run();" id="runButton" disabled>run</button>
+</body>
+</HTML>
